--- a/main.css
+++ b/main.css
@@ -6,9 +6,14 @@
   margin: 0 auto;
   text-align: center;
   font-family: fantasy;
-  -webkit-border-radius: 36px;
-border-radius: 36px;
 background: #816029;
 -webkit-box-shadow: 7px 7px 33px #684e21, -7px -7px 33px #9a7231;
 box-shadow: 7px 7px 33px #684e21, -7px -7px 33px #9a7231;
+border: 1px solid black;
+}
+b {
+  text-align: center;
+}
+.myAnimalCard {
+  border: 1px solid black;
 }
